--- a/client/src/components/Header/Header.module.sass
+++ b/client/src/components/Header/Header.module.sass
@@ -219,7 +219,8 @@
       @media(max-width: 360px)
         padding: 0 5px
         margin-left: 0
-
+      .phone
+        text-decoration: none
       span
         color: #337ab7
         font-size: 14px
