--- a/client/src/pages/Pricing/Pricing.module.scss
+++ b/client/src/pages/Pricing/Pricing.module.scss
@@ -112,6 +112,32 @@
             }
         }
     }
+    .Tooltip {
+        max-width: 200px;
+        z-index: 999;
+        padding: 8px 14px;
+        margin: 0;
+        background-color: #f7f7f7;
+        border-bottom: 1px solid #ebebeb;
+        border-radius: 5px 5px 0 0;
+        box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+        font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 1.42857143;
+        text-align: start;
+        text-decoration: none;
+        text-shadow: none;
+        text-transform: none;
+        letter-spacing: normal;
+        word-break: normal;
+        word-spacing: normal;
+        word-wrap: normal;
+        white-space: normal;
+        line-break: auto;
+        color: #666;
+    }
     @media screen and (max-width: 800px) {
         flex-direction: column;
         .BoxPrice {
@@ -171,31 +197,8 @@
                 }
             }
         }
+        .Tooltip {
+            display: none;
+        }
     }
-}
-.Tooltip {
-    max-width: 200px;
-    z-index: 999;
-    padding: 8px 14px;
-    margin: 0;
-    background-color: #f7f7f7;
-    border-bottom: 1px solid #ebebeb;
-    border-radius: 5px 5px 0 0;
-    box-shadow: 0 5px 10px rgba(0,0,0,0.2);
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.42857143;
-    text-align: start;
-    text-decoration: none;
-    text-shadow: none;
-    text-transform: none;
-    letter-spacing: normal;
-    word-break: normal;
-    word-spacing: normal;
-    word-wrap: normal;
-    white-space: normal;
-    line-break: auto;
-    color: #666;
 }
